# zerotunnel

./: .gitignore  CMakeLists.txt  Makefile  Makefile_aes_ctr_128_test.txt  Makefile_aes_ctr_192_test.txt  Makefile_aes_ctr_256_test.txt  Makefile_aes_gcm_128_test.txt  Makefile_chacha20_poly1305_test.txt  Makefile_chacha20_test.txt  Makefile_hmac_test.txt  Makefile_kdf_test.txt  Makefile_kem_kyber_test.txt  Makefile_kex_ecc_test.txt  Makefile_vcry_handshake_ipc_test.txt  Makefile_vcry_handshake_test.txt  README.md  run_tests.sh
cmake/: Utilities.cmake
common/: CMakeLists.txt  b64.c  b64.h  cbuf.c  cbuf.h  cpu.c  defines.h  defs.h  error.c  fzero.c  hex.c  hex.h  log.c  log.h  map.c  map.h  mem.c  memzero.c  memzero.h  mpmcq.h  progressbar.c  progressbar.h  prompts.c  prompts.h  sem.c  sem.h  sha256.c  sha256.h  spin.h  thread.h  thread_none.c  thread_posix.c  threadpool.c  threadpool.h  time_utils.c  time_utils.h  timeout.c  timeout.h  tty_io.c  tty_io.h  (+7 more)
crypto/: CMakeLists.txt  aead.h  aead_ossl.c  aes_gcm.h  aes_gcm_ossl.c  aes_gcm_ossl.h  cipher.c  cipher.h  cipher_defs.h  cipher_ossl.c  ecc.c  hmac.c  hmac.h  hmac_defs.h  hmac_ossl.c  hmac_ossl.h  kdf.c  kdf.h  kdf_defs.h  kdf_gtls.c  kdf_ossl.c  kem.c  kem.h  kem_kyber_defs.h  kem_kyber_oqs.c  kem_kyber_ossl.c  kex.c  kex.h  kex_ecc.h  kex_ecc_ossl.c  kex_ecc_ossl.h  sha256.c  sha256.h  sha256_alg.c  sha256_x86.c  types.h
docs/specifications/: CHANGELOG.md  KAPPA.md
lib/: addrinfo.c  auth.c  auth.h  ciphersuites.c  ciphersuites.h  client.c  client.h  conn_defs.h  fs.c  fs.h  io.c  io.h  io_async.c  io_async.h  iomem.c  iomem.h  ip.c  ip.h  netio.c  passgen.c  password.c  protocol.h  protocol.in.h  server.c  server.h  vcry.c  vcry.h  wordlist.c  zt_addrinfo.c  ztlib.h
random/: rdrand.c  rdrand.h  systemrand.c  systemrand.h
schemas/: README.md  wordlist.sqlite3
src/: main.c  options.c  options.h
tests/: aes_ctr_128_test.c  aes_ctr_192_test.c  aes_ctr_256_test.c  aes_gcm_128_kat.h  aes_gcm_128_test.c  aes_gcm_128_tvec.h  chacha20_poly1305_test.c  chacha20_test.c  hmac_test.c  hmac_tvec.h  kdf_test.c  kem_kyber_test.c  kex_ecc_test.c  test.h  test_aes_gcm_128.c  test_utils.c  vcry_handshake_ipc_test.c  vcry_handshake_test.c  vcry_handshake_test_ipc.c
